# distinctipy

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  examples.ipynb  examples.py  pyproject.toml  requirements.txt  setup.py  tmp.ipynb
.github/workflows/: pythonapp.yml  pythonpublish.yml
datasets/: LICENSE  a1.csv  s1.csv  s2.csv  s3.csv
distinctipy/: __init__.py  _colorsets_data.py  color.py  colorblind.py  colorsets.py  distinctipy.py  examples.py
distinctipy/datasets/: LICENSE  a2.csv  a3.csv  b1.csv  s4.csv
distinctipy/tests/: test_color.py
docs/: about.rst  api.rst  conf.py  docs.rst  index.rst  install.rst  usage.ipynb
requirements/: docs.txt  old.txt  optional.txt  tests.txt
tests/: test_distinctipy.py  test_examples.py
