[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distinctipy"
version = "1.3.4"
authors = [
    {name = "Jack Roberts", email = "jroberts@turing.ac.uk"},
]
description = "A lightweight package for generating visually distinct colours."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["color", "colour", "palette", "colormap", "colorblind", "colourblind"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
    "Framework :: Matplotlib",
]
dependencies = ["numpy>=1.16.3"]

[project.optional-dependencies]
extras = [
    "pandas>=0.24.2",
    "matplotlib>=3.1.0",

]
tests = [
    "black==22.6.0",
    "codecov>=2.0.15",
    "coverage>=5.3.1",
    "flake8==4.0.1",
    "isort==5.10.1",
    "pytest>=4.6.0",
    "pytest-cov>=2.9.0",
]
docs = [
    "sphinx-rtd-theme>=0.2.3",
    "nbsphinx>=0.8.0",
    "ipython>=7.34.0",
]

[project.urls]
Homepage = "https://github.com/alan-turing-institute/distinctipy"
Documentation = "https://distinctipy.readthedocs.io/"
